<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RouteCreationActivity">

    <TextView
        android:id="@+id/tvRouteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="Routename:"
        app:layout_constraintEnd_toStartOf="@id/etRouteName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@id/btnAddWaypoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRouteName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvRouteName"
        app:layout_constraintTop_toTopOf="@id/tvRouteName"
        app:layout_constraintBottom_toBottomOf="@id/tvRouteName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789-,.?!"/>

    <Button
        android:id="@+id/btnAddWaypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Add Waypoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRouteName"
        app:layout_constraintBottom_toTopOf="@+id/selectedWaypointList"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/selectedWaypointList"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddWaypoint"
        app:layout_constraintBottom_toTopOf="@+id/saveRoute"/>

    <Button
        android:id="@+id/btnAddOldWaypoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="get old Waypoints"
        app:layout_constraintTop_toBottomOf="@+id/saveRoute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnShowMapInRouteActivity"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnShowMapInRouteActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Map"
        app:layout_constraintTop_toBottomOf="@+id/btnAddOldWaypoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/saveRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        app:layout_constraintTop_toBottomOf="@+id/selectedWaypointList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteRoute"
        app:layout_constraintBottom_toTopOf="@id/btnAddOldWaypoints"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/deleteRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        app:layout_constraintTop_toBottomOf="@+id/selectedWaypointList"
        app:layout_constraintStart_toEndOf="@id/saveRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnAddOldWaypoints"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>