<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaypointActivity">

    <Button
        android:id="@+id/btnEditWaypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_waypoint"
        app:layout_constraintBottom_toTopOf="@id/tvWaypointName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvWaypointName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tvWaypointId"
        app:layout_constraintEnd_toStartOf="@id/etWaypointName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditWaypoint"/>

    <EditText
        android:id="@+id/etWaypointName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789-,.?!"
        app:layout_constraintBottom_toBottomOf="@id/tvWaypointName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvWaypointName"
        app:layout_constraintTop_toTopOf="@id/tvWaypointName" />

    <TextView
        android:id="@+id/tvWaypointId"
        android:layout_width="84dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:text="@string/id"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tvWaypointPosition"
        app:layout_constraintEnd_toEndOf="@id/tvWaypointName"
        app:layout_constraintStart_toStartOf="@id/tvWaypointName"
        app:layout_constraintTop_toBottomOf="@id/tvWaypointName"/>

    <TextView
        android:id="@+id/showWaypointId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tvWaypointId"
        app:layout_constraintEnd_toEndOf="@id/etWaypointName"
        app:layout_constraintStart_toStartOf="@id/etWaypointName"
        app:layout_constraintTop_toTopOf="@id/tvWaypointId"/>

    <TextView
        android:id="@+id/tvWaypointPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="Position"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tvWaypointNote"
        app:layout_constraintEnd_toEndOf="@id/tvWaypointName"
        app:layout_constraintStart_toStartOf="@id/tvWaypointName"
        app:layout_constraintTop_toBottomOf="@id/tvWaypointId"/>

    <TextView
        android:id="@+id/tvLocationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="@id/tvWaypointPosition"
        app:layout_constraintEnd_toEndOf="@id/etWaypointName"
        app:layout_constraintStart_toStartOf="@id/etWaypointName"
        app:layout_constraintTop_toTopOf="@id/tvWaypointPosition"/>

    <TextView
        android:id="@+id/tvWaypointNote"
        android:layout_width="84dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:text="Note"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btnAddLocation"
        app:layout_constraintEnd_toEndOf="@id/tvWaypointName"
        app:layout_constraintStart_toStartOf="@id/tvWaypointName"
        app:layout_constraintTop_toBottomOf="@id/tvWaypointPosition"/>

    <EditText
        android:id="@+id/etWaypointNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789-,.?!"
        app:layout_constraintBottom_toBottomOf="@id/tvWaypointNote"
        app:layout_constraintEnd_toEndOf="@id/etWaypointName"
        app:layout_constraintStart_toStartOf="@id/etWaypointName"
        app:layout_constraintTop_toTopOf="@id/tvWaypointNote"
        />

    <Button
        android:id="@+id/btnAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Add Location"
        app:layout_constraintBottom_toTopOf="@id/btnAssignWaypoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWaypointNote"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnAssignWaypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Assign Waypoint"
        app:layout_constraintBottom_toTopOf="@id/btnAcceptWaypoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddLocation"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAcceptWaypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteWaypoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAssignWaypoint"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnDeleteWaypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/deleteGuard"
        app:layout_constraintBottom_toBottomOf="@id/btnAcceptWaypoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAcceptWaypoint"
        app:layout_constraintTop_toTopOf="@id/btnAcceptWaypoint"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>