<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RouteActivity"
    android:weightSum="20">

    <Button
        android:id="@+id/newRoute"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="new Route"
        android:layout_weight="2"
        android:backgroundTint="#F3F1F1"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:textColor="#D40F6B"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etSearchRoute"
        android:hint="Search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <ListView
        android:id="@+id/routeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"/>

</LinearLayout>